# multipart-decoder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/multipart_decoder/: __init__.py  decoder.py
tests/: test_decoder.py
